segundo commit del pacial ya el codigo imprime las figuras

--- a/AC-03OCT/rasterizado.htm
+++ b/AC-03OCT/rasterizado.htm
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Figura Poligonal Rasterizada</h1>
+    <button onclick="generarFigura()">Generar Polígono</button>
+    <p id="tipo-poligono"></p>
     <canvas id="canvas" width="500" height="500"></canvas>
 </body>
 </html>
