--- a/AC-03OCT/vectorizado.htm
+++ b/AC-03OCT/vectorizado.htm
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Figura Poligonal Vectorizada</h1>
+    <button onclick="generarFigura()">Generar Polígono</button>
+    <p id="tipo-poligono"></p>
     <div id="svg-container"></div>
 </body>
 </html>
